src/test/custom/invalid/preCompileSyntaxErr/invalidInclude2.wacc
include List<int>junk...

begin
  skip
end